--- a/css/styles.css
+++ b/css/styles.css
@@ -11123,7 +11123,7 @@ fieldset:disabled .btn {
 header.masthead {
     position: relative;
     background-color: #343a40;
-    background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+    background: url("../img/bg-masthead.jpg") no-repeat center center;
     background-size: cover;
     padding-top: 8rem;
     padding-bottom: 8rem;
